--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
     "@react-google-maps/api": "^2.19.3",
+    "@tanstack/react-query": "^5.36.2",
+    "@tanstack/react-query-devtools": "^5.36.2",
     "framer-motion": "^11.2.0",
     "next": "14.2.3",
     "react": "^18",
