--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.36.2",
     "@tanstack/react-query-devtools": "^5.36.2",
     "framer-motion": "^11.2.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
