--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.36.2",
     "@tanstack/react-query-devtools": "^5.36.2",
+    "@testing-library/user-event": "^14.5.2",
     "framer-motion": "^11.2.0",
     "next": "14.2.3",
     "react": "^18",
