--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^3.1.0",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-mock-store": "^1.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
